--- a/CookBooks/appsettings.json
+++ b/CookBooks/appsettings.json
@@ -2,6 +2,13 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=DESKTOP-48VTVQE;Initial Catalog=CookBook;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
   },
+
+  "CloudinarySettings": {
+    "CloudName": "ddtcbiyea",
+    "ApiKey": "828126519431498",
+    "ApiSecret": "5DG0HpNwJuiXo2gYC7zT-kOJeaU"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
